--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8080
 # = DATA SOURCE
 # ===============================
 
-spring.datasource.url = jdbc:mysql://localhost:3306/vectron?useSSL=false
+spring.datasource.url = jdbc:mysql://localhost:3306/vectrondb?useSSL=false
 spring.datasource.username = root
 spring.datasource.password = soho123
 spring.datasource.testWhileIdle = true
